# GAAT

./: CONTRIBUTING.md  DISCUSSION_SUMMARY.md  README.md  agent.py  agent_runner.py  auxiliary.py  cheetahclaws.py  compaction.py  config.py  context.py  demo.py  error_classifier.py  nano_claude.py  providers.py  pyproject.toml  quota.py  requirements.txt  runtime.py  session_store.py  skills.py  tmux_tools.py  tool_registry.py  tools.py
.github/workflows/: ci.yml
agent_templates/: research_assistant.md
bridges/: interactive_session.py  slack.py  telegram.py  terminal_runner.py  wechat.py
cc_mcp/: __init__.py  types.py
commands/: advanced.py  agent_cmd.py  checkpoint_plan.py  config_cmd.py  core.py  monitor_cmd.py  session.py
demos/: make_slack_demo.py  make_wechat_demo.py
docs/: README.DE.MD  README.PT.MD  news.md
docs/guides/: plugin-authoring.md  recipes.md  reference.md  trading.md  web-ui.md
examples/example-plugin/: README.md  cmd.py  plugin.json  tools.py
examples/example-plugin/skills/: example-skill.md
modular/trading/: PLUGIN.md  cmd.py  tools.py
modular/trading/engines/: base.py
modular/voice/: cmd.py
scripts/: install.sh
tests/: e2e_compact.py  e2e_plan_mode.py  e2e_plan_tools.py  e2e_slash_prompt.py  test_input_completer.py  test_mcp.py  test_skill_nested.py
tools/: __init__.py  interaction.py
ui/: input.py  render.py
web/: api.py  chat.html  server.py
